--- a/imdb-frontend/package.json
+++ b/imdb-frontend/package.json
@@ -28,5 +28,14 @@
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
     "vite": "^7.1.7"
+  },
+  "lint-staged": {
+    "src/**/*.(ts|tsx|js|jsx)": [
+      "eslint --fix",
+      "prettier --write"
+    ],
+    "src/**/*.(json|css|scss|md)": [
+      "prettier --write"
+    ]
   }
 }
