Create folder that conatains seedData sample.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 imdb-data/name.basics.tsv
 /SeedData/.vs
-/SeedData/SeedData/data
+/SeedData/SeedData/data/*
+!/SeedData/SeedData/data/data_sample.txt
+/imdb-data/data
