--- a/SeedData/SeedData/SeedData.csproj
+++ b/SeedData/SeedData/SeedData.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="DBContext" Version="1.0.0" />
+    <PackageReference Include="DotNetEnv" Version="3.1.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.9">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
