Updated models and context with reverse engineering.

--- a/SeedData/SeedData/efpt.config.json
+++ b/SeedData/SeedData/efpt.config.json
@@ -103,7 +103,7 @@
    "UseInflector": true,
    "UseInternalAccessModifiersForSprocsAndFunctions": false,
    "UseLegacyPluralizer": false,
-   "UseManyToManyEntity": true,
+   "UseManyToManyEntity": false,
    "UseNoDefaultConstructor": false,
    "UseNoNavigations": false,
    "UseNoObjectFilter": false,
