--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@ imdb-data/name.basics.tsv
 /SeedData/.vs
 /SeedData/SeedData/data/*
 !/SeedData/SeedData/data/data_sample.txt
-/imdb-data/data
+/imdb-data/*
+/.vs/*
+/.vscode/*
