--- a/SeedData/SeedData/SeedData.csproj
+++ b/SeedData/SeedData/SeedData.csproj
@@ -20,7 +20,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EfCoreModelsLib\EfCoreModelsLib.csproj" />
+    <Reference Include="EfCoreModelsLib">
+      <HintPath>..\EfCoreModelsLib\bin\Debug\net9.0\EfCoreModelsLib.dll</HintPath>
+    </Reference>
   </ItemGroup>
 
 </Project>
