--- a/SeedData/SeedData/SeedData.csproj
+++ b/SeedData/SeedData/SeedData.csproj
@@ -20,9 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Reference Include="EfCoreModelsLib">
-      <HintPath>..\EfCoreModelsLib\bin\Debug\net9.0\EfCoreModelsLib.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\EfCoreModelsLib\EfCoreModelsLib.csproj" />
   </ItemGroup>
 
 </Project>
