--- a/SeedData/EfCoreModelsLib/EfCoreModelsLib.csproj
+++ b/SeedData/EfCoreModelsLib/EfCoreModelsLib.csproj
@@ -14,6 +14,7 @@
 			<PrivateAssets>all</PrivateAssets>
 		</PackageReference>
 		<PackageReference Include="MongoDB.Driver" Version="3.5.0" />
+		<PackageReference Include="MongoDB.EntityFrameworkCore" Version="9.0.3" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
 	</ItemGroup>
 
