--- a/SeedData/SeedData/SeedData.csproj
+++ b/SeedData/SeedData/SeedData.csproj
@@ -23,4 +23,8 @@
     <ProjectReference Include="..\EfCoreModelsLib\EfCoreModelsLib.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="data\" />
+  </ItemGroup>
+
 </Project>
