Refactor(Docker-compose-dev): DB Name Change
Changed the name for the commented MySQL Name. For Personal prefrence and better understanding

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,7 +17,7 @@ services:
   #   container_name: mysql
   #   environment:
   #     MYSQL_ROOT_PASSWORD: rootpassword
-  #     MYSQL_DATABASE: rawgDatabase
+  #     MYSQL_DATABASE: imdb
   #   ports:
   #     - "3307:3306"
   #   volumes:
