--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "[Frontend](https://imdb-project-frontend.onrender.com/)",
   "main": "index.js",
   "scripts": {
+    "build": "bash ./scripts/build.sh",
     "test": "echo \"Husky ran!\"",
     "prepare": "husky",
     "dev_up": "bash ./scripts/dev_up.sh",
