--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -21,4 +21,5 @@ jobs:
     name: Deploy Hooks Job
     uses: ./.github/workflows/deploy-hooks.yml
     needs: test
-    secrets: ${{ secrets }}
+    secrets:
+      BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
