Added quotations back and added curl properties

--- a/.github/workflows/deploy-hooks.yml
+++ b/.github/workflows/deploy-hooks.yml
@@ -14,4 +14,4 @@ jobs:
         env:
           BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
         run: |
-          curl $BREZOR_DEPLOY_HOOK
+          curl "$BREZOR_DEPLOY_HOOK" -X POST
