--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -22,4 +22,4 @@ jobs:
     uses: ./.github/workflows/deploy-hooks.yml
     needs: test
     secrets:
-      BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+      BREZOR_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
