--- a/.github/workflows/deploy-hooks.yml
+++ b/.github/workflows/deploy-hooks.yml
@@ -11,6 +11,5 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy Hooks
-        uses: distributhor/workflow-webhook@v3
-        with:
-          webhook_url: $BREZOR_HOOK
+        run: |
+          curl -X POST "$BREZOR_HOOK"
