--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - main
+      - dev/oliver
 
 jobs:
   test:
@@ -23,6 +24,8 @@ jobs:
     environment: secrets
     steps:
       - name: Deploy webhook
-        uses: distributhor/workflow-webhook@v3
-        with:
-          webhook_url: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+        if: github.ref == 'refs/heads/main'
+        env:
+          BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+        run: |
+          curl "$BREZOR_DEPLOY_HOOK"
