--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -23,7 +23,7 @@ jobs:
     runs-on: ubuntu-latest
     environment: secrets
     steps:
-      - name: Deploy webhook
+      - name: Deploy frontend
         if: github.ref == 'refs/heads/main'
         env:
           BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
