--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-      - dev/oliver
 
 jobs:
   test:
@@ -24,7 +23,7 @@ jobs:
     environment: secrets
     steps:
       - name: Deploy frontend
-        # if: github.ref == 'refs/heads/main'
+        if: github.ref == 'refs/heads/main'
         env:
           BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
         run: |
