--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -19,12 +19,4 @@ jobs:
   deploy-hooks:
     name: Deploy Hooks Job
     needs: test
-    runs-on: ubuntu-latest
-    environment: secrets
-    steps:
-      - name: Deploy frontend
-        if: github.ref == 'refs/heads/main'
-        env:
-          BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
-        run: |
-          curl "$BREZOR_DEPLOY_HOOK"
+    uses: ./.github/workflows/deploy-frontend.yml
