Undoing workflow changes

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -12,19 +12,8 @@ jobs:
     runs-on: ubuntu-latest
     environment: secrets
     steps:
-      - name: Checkout Repository
-        uses: actions/checkout@v4
-
-      - name: Filter Frontend Changes
-        uses: dorny/paths-filter@v3
-        id: changes
-        with:
-          filters: |
-            frontend:
-              - 'frontend/**'
-
-      - name: Deploy Frontend if Changes Detected
-        if: steps.changes.outputs.frontend == 'true'
+      - name: Deploy Frontend
+        if: github.ref == 'refs/heads/main'
         env:
           BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
         run: |
