--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -54,6 +54,7 @@ services:
   #-- MongoDB Service for Development Environment --
   mongodb1:
     image: mongo:8.0
+    container_name: mongodb1
     command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27017"]
     ports:
       - 27017:27017
@@ -72,6 +73,7 @@ services:
 
   mongodb2:
     image: mongo:8.0
+    container_name: mongodb2
     command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27018"]
     ports:
       - 27018:27018
@@ -83,6 +85,7 @@ services:
 
   mongodb3:
     image: mongo:8.0
+    container_name: mongodb3
     command: ["--replSet", "rs0", "--bind_ip_all", "--port", "27019"]
     ports:
       - 27019:27019
