--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -3,7 +3,8 @@ name: Merge to Main Workflow
 on:
   push:
     branches:
-      - main
+      - main 
+      - dev/GHCR
 
 jobs:
   test:
@@ -16,17 +17,17 @@ jobs:
       - name: Run a Simple Command
         run: echo "This is a test job for push main."
 
-  # ci-docker-template:
-  #   name: CI Docker Build and Push Docker Image
-  #   needs: test
-  #   uses: ./.github/workflows/ci-docker-template.yml
-  #   permissions:
-  #     contents: read
-  #     packages: write
-
-  deploy-frontend:
-    name: Deploy Frontend Application
+  ci-docker-template:
+    name: CI Docker Build and Push Docker Image
     needs: test
-    uses: ./.github/workflows/deploy-frontend.yml
-    secrets:
-      BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+    uses: ./.github/workflows/ci-docker-builder-frontend.yml
+    permissions:
+      contents: read
+      packages: write
+
+  # deploy-frontend:
+  #   name: Deploy Frontend Application
+  #   needs: test
+  #   uses: ./.github/workflows/deploy-frontend.yml
+  #   secrets:
+  #     BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
