--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,15 +1,24 @@
+# Build stage
+FROM node:22-alpine AS builder
+WORKDIR /app
+
+COPY package*.json ./
+RUN npm install
+
+COPY . .
+RUN npm run build
+
+# Production stage
 FROM node:22-alpine
 WORKDIR /app
 
-# Copy only production dependencies
 COPY package*.json ./
-
+# RUN npm install --omit=dev
 RUN npm install
-# Copy built assets and necessary files
-COPY . .
 
-# Build production assets
-RUN npm run build
+COPY --from=builder /app/dist ./dist
+COPY --from=builder /app/vite.config.* ./
+COPY --from=builder /app/index.html ./
 
 EXPOSE 4173
 CMD ["npm", "run", "start"]
