--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,8 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "vite": "^7.1.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -32,7 +33,6 @@
     "prettier": "^3.6.2",
     "typescript": "~5.8.3",
     "typescript-eslint": "^8.44.0",
-    "vite": "^7.1.7",
     "vite-tsconfig-paths": "^5.1.4"
   },
   "lint-staged": {
