--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -20,9 +20,7 @@ COPY package*.json ./
 # RUN npm install --omit=dev
 RUN npm install
 
-COPY --from=builder /app/dist ./dist
-COPY --from=builder /app/vite.config.* ./
-COPY --from=builder /app/public/index.html ./
+COPY . .
 
 EXPOSE 4173
 CMD ["npm", "run", "start"]
