--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,21 +7,27 @@ RUN npm ci
 
 COPY . .
 
-# Ensure bash is available for scripts starting with #!/bin/bash
 RUN apk add --no-cache bash
 
+# Build the app (creates /dist)
 RUN npm run build
 
 # Production stage
 FROM node:22-alpine
 WORKDIR /app
 
+# Copy only what's needed for running the built app
 COPY package*.json ./
-# RUN npm install --omit=dev
-RUN npm install
+RUN npm install --omit=dev
 
-COPY . .
+# Copy the built files from the builder stage
+COPY --from=builder /app/dist ./dist
 
+# Expose the default preview port
 EXPOSE 4173
-CMD ["npm", "run", "start"]
 
+# Use a lightweight static server instead of vite preview
+RUN npm install -g serve
+
+# Start the static server
+CMD ["serve", "-s", "dist", "-l", "4173"]
