--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -18,7 +18,7 @@ WORKDIR /app
 
 # Copy only what's needed for running the built app
 COPY package*.json ./
-RUN npm install --omit=dev
+RUN npm install 
 
 # Copy the built files from the builder stage
 COPY --from=builder /app/dist ./dist
