--- a/.github/workflows/ci-docker-template.yml
+++ b/.github/workflows/ci-docker-template.yml
@@ -12,7 +12,8 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
+        # uses: docker/login-action@v3
+        uses: ./
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
