--- a/.github/workflows/ci-docker-template.yml
+++ b/.github/workflows/ci-docker-template.yml
@@ -12,8 +12,7 @@ jobs:
         uses: actions/checkout@v5
 
       - name: Log in to GitHub Container Registry
-        # uses: docker/login-action@v3
-        uses: ./
+        uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
