Added changes from sonar cloud

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -17,8 +17,8 @@ services:
   seed_data:
     container_name: seeddata
     build:
-      context: .
-      dockerfile: SeedData/SeedData/Dockerfile
+      context: ./SeedData
+      dockerfile: SeedData/Dockerfile
     depends_on:
       - mysql
       - mongodb1
