--- a/SeedData/SeedData/Dockerfile
+++ b/SeedData/SeedData/Dockerfile
@@ -10,17 +10,17 @@ WORKDIR /app
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["SeedData/SeedData/SeedData.csproj", "SeedData/SeedData/"]
-COPY ["SeedData/EfCoreModelsLib/EfCoreModelsLib.csproj", "SeedData/EfCoreModelsLib/"]
-RUN dotnet restore "./SeedData/SeedData/SeedData.csproj"
+COPY ["SeedData/SeedData.csproj", "SeedData/"]
+COPY ["EfCoreModelsLib/EfCoreModelsLib.csproj", "EfCoreModelsLib/"]
+RUN dotnet restore "./SeedData/SeedData.csproj"
 COPY . .
-WORKDIR "/src/SeedData/SeedData"
-RUN dotnet build "./SeedData.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/SeedData"
+RUN dotnet build "./SeedData.csproj" -c "$BUILD_CONFIGURATION" -o /app/build
 
 # This stage is used to publish the service project to be copied to the final stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./SeedData.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./SeedData.csproj" -c "$BUILD_CONFIGURATION" -o /app/publish /p:UseAppHost=false
 
 # This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
 FROM base AS final
