Dev/sheromy sql (#34)
Co-authored-by: Brezzor <oliver.bresson@gmail.com>

--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -16,7 +16,15 @@ jobs:
       - name: Run a Simple Command
         run: echo "This is a test job for push main."
 
-  deploy-fronend:
+  # ci-docker-template:
+  #   name: CI Docker Build and Push Docker Image
+  #   needs: test
+  #   uses: ./.github/workflows/ci-docker-template.yml
+  #   permissions:
+  #     contents: read
+  #     packages: write
+
+  deploy-frontend:
     name: Deploy Frontend Application
     needs: test
     uses: ./.github/workflows/deploy-frontend.yml
