--- a/.github/workflows/ci-docker-builder-frontend.yml
+++ b/.github/workflows/ci-docker-builder-frontend.yml
@@ -41,10 +41,9 @@ jobs:
 
       - name: Build Docker image
         run: |
-          docker build --no-cache -t $IMAGE_NAME:$IMAGE_TAG -t $IMAGE_NAME:latest -f ./frontend/Dockerfile .
+          docker build --no-cache -t $IMAGE_NAME:$IMAGE_TAG -t $IMAGE_NAME:latest -f ./frontend/Dockerfile ./frontend
 
       - name: Push Docker image to GitHub Container Registry
         run: |
           docker push $IMAGE_NAME:$IMAGE_TAG
           docker push $IMAGE_NAME:latest
-
