--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,29 +2,37 @@
 FROM node:22-alpine AS builder
 WORKDIR /app
 
-# Copy package.json first
-COPY package*.json ./
-RUN npm ci
+COPY frontend/package*.json ./
+RUN npm install
 
-# Copy all frontend source
-COPY . ./
+COPY frontend/ ./
 
 RUN apk add --no-cache bash
-# Build frontend (creates /app/dist)
+
+# Build the app (creates /dist)
 RUN npm run build
 
 # Production stage
 FROM node:22-alpine
 WORKDIR /app
 
-# Install lightweight server
+# Copy only what's needed for running the built app
+COPY package*.json ./
+# RUN npm install 
 RUN npm install -g serve
 
-# Copy build output from builder
+
+# Copy the built files from the builder stage
+# COPY frontend/ ./
 COPY --from=builder /app/dist ./dist
 
-# Expose port
+# Expose the default preview port
 EXPOSE 4173
 
-# Start server
+# Use a lightweight static server instead of vite preview
+RUN npm install -g serve
+
+# Start the static server
 CMD ["serve", "-s", "dist", "-l", "4173"]
+
+
