test deploy hook on render.com.

--- a/.github/workflows/deploy-frontend.yml
+++ b/.github/workflows/deploy-frontend.yml
@@ -5,6 +5,8 @@ on:
     secrets:
       BREZOR_DEPLOY_HOOK:
         required: true
+      RASHO_RENDER_DEPLOY_HOOK:
+        required: true
 
 jobs:
   deploy-frontend:
@@ -16,5 +18,7 @@ jobs:
         if: github.ref == 'refs/heads/main'
         env:
           BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
+          RASHO_RENDER_DEPLOY_HOOK: ${{ secrets.RASHO_RENDER_DEPLOY_HOOK }}
         run: |
-          curl "$BREZOR_DEPLOY_HOOK"
+          # curl "$BREZOR_DEPLOY_HOOK"
+          curl "$RASHO_RENDER_DEPLOY_HOOK"
