--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -27,7 +27,7 @@ jobs:
 
   deploy-frontend:
     name: Deploy Frontend Application
-    needs: test
+    needs: ci-docker-template
     uses: ./.github/workflows/deploy-frontend.yml
     secrets:
       BREZOR_DEPLOY_HOOK: ${{ secrets.BREZOR_DEPLOY_HOOK }}
