--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -7,7 +7,7 @@ RUN apk --no-cache add bash
 
 # Copy package files and install dependencies
 COPY package*.json ./
-RUN npm install
+RUN npm install --only=production
 
 # Copy rest of source code and build the static files
 COPY . ./
