--- a/SeedData/EfCoreModelsLib/EfCoreModelsLib.csproj
+++ b/SeedData/EfCoreModelsLib/EfCoreModelsLib.csproj
@@ -15,6 +15,7 @@
 		</PackageReference>
 		<PackageReference Include="MongoDB.Driver" Version="3.5.0" />
 		<PackageReference Include="MongoDB.EntityFrameworkCore" Version="9.0.3" />
+		<PackageReference Include="Neo4j.Driver" Version="5.28.3" />
 		<PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="9.0.0" />
 	</ItemGroup>
 
