Added docker support to graphql api

--- a/backend/GraphQL/GraphQL.csproj
+++ b/backend/GraphQL/GraphQL.csproj
@@ -5,6 +5,7 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>preview</LangVersion>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup Condition="'$(ImplicitUsings)' == 'enable'">
@@ -20,6 +21,7 @@
     </PackageReference>
     <PackageReference Include="HotChocolate.Data" Version="15.1.11" />
     <PackageReference Include="HotChocolate.Types.OffsetPagination" Version="15.1.11" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
 </Project>
