--- a/.github/workflows/ci-docker-builder-graphql.yml
+++ b/.github/workflows/ci-docker-builder-graphql.yml
@@ -41,7 +41,7 @@ jobs:
 
       - name: Build Docker image
         run: |
-          cd backend/GraphQL
+          cd backend
           docker build --no-cache -t $IMAGE_NAME:$IMAGE_TAG -t $IMAGE_NAME:latest -f ./Dockerfile .
 
       - name: Push Docker image to GitHub Container Registry
