--- a/.github/workflows/push-main.yml
+++ b/.github/workflows/push-main.yml
@@ -24,6 +24,21 @@ jobs:
   #     contents: read
   #     packages: write
 
+  build-backend-image:
+    name: CI Docker Build and Push GraphQL Docker Image
+    needs: test
+    uses: ./.github/workflows/ci-docker-builder-graphql.yml
+    permissions:
+      contents: read
+      packages: write
+
+  deploy-backend:
+    name: Deploy Backend Application
+    needs: build-backend-image
+    uses: ./.github/workflows/deploy-backend.yml
+    secrets:
+      BREZOR_BACKEND_DEPLOY_HOOK: ${{ secrets.BREZOR_BACKEND_DEPLOY_HOOK }}
+
   deploy-frontend:
     name: Deploy Frontend Application
     needs: test
