--- a/backend/GraphQL/GraphQL.csproj
+++ b/backend/GraphQL/GraphQL.csproj
@@ -24,4 +24,8 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.22.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\EfCoreModelsLib\EfCoreModelsLib.csproj" />
+  </ItemGroup>
+
 </Project>
