Added a dev_up_build script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Husky ran!\"",
     "prepare": "husky",
     "dev_up": "bash ./scripts/dev_up.sh",
+    "dev_up_build": "bash ./scripts/dev_up_build.sh",
     "dev_down": "bash ./scripts/dev_down.sh"
   },
   "repository": {
