--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,7 @@ services:
       - "5000:8080"
     environment:
       MySqlConnectionString: server=mysql;port=3306;database=imdb;user=root;password=admin;default command timeout=600
+      ASPNETCORE_ENVIRONMENT: Development
 
   seed_data:
     container_name: seeddata
